# sci-rs

./: AGENTS.md  Cargo.toml  README.md
.githooks/: pre-push
docs/: REFACTOR_CHECKLIST.md  REFACTOR_SOUL.md  SCIPY_AGENT_PACKET_TEMPLATE.md  SCIPY_CHECKLIST.md  SCIPY_CHECKLIST_PROCESS.md  SCIPY_TRACE_PROTOCOL.md  SOURCE_TRAVERSAL.md
sci-rs-core/src/num_rs/convolve/: mod.rs
sci-rs/benches/: filtfilt.rs  lfilter.rs  sosfilt.rs  sosfiltfilt.rs
sci-rs/src/: lib.rs  plot.rs  stats.rs
sci-rs/src/error/: mod.rs
sci-rs/src/kernel/: errors.rs  io.rs  lifecycle.rs  mod.rs
sci-rs/src/linalg/: companion.rs
sci-rs/src/signal/: convolve.rs  mod.rs  multirate.rs  peak.rs  resample.rs  spectral.rs  traits.rs
sci-rs/src/signal/filter/: arraytools.rs  ext.rs  filtfilt.rs  kernels.rs  lfilter.rs  lfilter_zi.rs  mod.rs  savgol_filter.rs  sosfilt.rs  sosfilt_zi.rs  sosfiltfilt.rs
sci-rs/src/signal/filter/design/: bilinear_zpk.rs  butter.rs  cplx.rs  filter_type.rs  firwin.rs  iirfilter.rs  kaiser.rs  kernels.rs  lp2bp_zpk.rs  lp2bs_zpk.rs  lp2hp_zpk.rs  lp2lp_zpk.rs  mod.rs  relative_degree.rs  zpk2sos.rs  zpk2tf.rs
sci-rs/src/signal/wave/: kernels.rs  mod.rs
sci-rs/src/signal/windows/: kernels.rs  mod.rs  triangle.rs
scripts/: generate_scipy_checklist_inventory.py  verify_scipy_checklist.py
xtask/: Cargo.toml
xtask/src/: main.rs
