[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
ndarray = { version = "0.16.1", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sci-rs = { path = "../sci-rs", default-features = false, features = ["std", "alloc"] }
sci-rs-core = { path = "../sci-rs-core", default-features = false, features = ["alloc"] }
